hphp/test/quick/FPassC.php.expectf
6
HipHop Fatal error: Cannot pass parameter 1 by reference in %s on line 9
